--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   animated_notch_bottom_bar: ^1.0.1
   syncfusion_flutter_pdfviewer: ^24.2.9
+  connectivity: ^3.0.6
 
 dev_dependencies:
   flutter_test:
