--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 12.12.0+12
 
 environment:
   sdk: '>=3.2.6 <4.0.0'
@@ -40,6 +40,19 @@ dependencies:
   animated_notch_bottom_bar: ^1.0.1
   syncfusion_flutter_pdfviewer: ^24.2.9
   connectivity: ^3.0.6
+  google_mobile_ads: ^5.1.0
+  flutter_qiblah: ^3.0.4
+  audioplayers: ^6.1.0
+  jhijri: ^1.0.0
+  adhan: ^2.0.0+1
+  hive: ^2.2.3
+  quran: ^1.2.4
+  google_fonts: ^6.2.1
+  provider: ^6.1.2
+  table_calendar: ^3.1.2
+  hijri: ^3.0.0
+  geolocator: ^13.0.2
+  geocoding: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +78,14 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+      - assets/back.jpg
+      - assets/quran.png
+      - assets/cal.png
+      - assets/bak.jpg
+      - assets/Images/3.png
+      - assets/Images/4.png
+      - assets/Images/5.png
+      - assets/Ayat/Al-Kauther.mp3
       - assets/
   #   - images/a_dot_ham.jpeg
 
