--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   hijri: ^3.0.0
   geolocator: ^13.0.2
   geocoding: ^3.0.0
+  zoom_widget: ^2.0.1
 
 dev_dependencies:
   flutter_test:
