--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,9 @@ dependencies:
   geolocator: ^13.0.2
   geocoding: ^3.0.0
   zoom_widget: ^2.0.1
+  just_audio: ^0.9.42
+  animated_segmented_tab_control: ^2.0.0
+  dio: ^5.7.0
 
 dev_dependencies:
   flutter_test:
