--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,10 @@ dependencies:
   shared_preferences: ^2.3.3
   hive_flutter: ^1.1.0
   pod_player: ^0.2.2
+  permission_handler: ^11.3.1
+  easy_localization: ^3.0.7
+  file_utils: ^1.0.1
+  flutter_pdfview: ^1.3.4
 
 dev_dependencies:
   flutter_test:
