--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -94,7 +94,7 @@ flutter:
       - assets/back.jpg
       - assets/quran.png
       - assets/cal.png
-      - assets/bak.jpg
+      - assets/sak.png
       - assets/Images/3.png
       - assets/Images/4.png
       - assets/Images/5.png
