--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -67,6 +67,8 @@ android {
    }
    buildTypes {
        release {
+         minifyEnabled false
+        shrinkResources false
            signingConfig signingConfigs.release
        }
    }
