--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 12.12.0+12
+version: 13.13.0+13
 
 environment:
   sdk: '>=3.2.6 <4.0.0'
@@ -91,7 +91,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-      - assets/back.jpg
+      - assets/
       - assets/quran.png
       - assets/cal.png
       - assets/sak.png
@@ -99,7 +99,8 @@ flutter:
       - assets/Images/4.png
       - assets/Images/5.png
       - assets/Ayat/Al-Kauther.mp3
-      - assets/
+      - assets/Ayat/surah-rahman.mp3
+      
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
